--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es9">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,15 +24,22 @@
         <article class="app-container-part">
           <img
             class="app-container-img"
-            src="./assets/1.jpeg"
+            src="https://i.pinimg.com/736x/4d/5e/45/4d5e45149c030340fb61bc0aa93086fc.jpg"
             alt="Fondo Login"
           />
         </article>
+        <article class="app-container-part" id="diceApp"></article>
+        <div id="diceContainer">
+          <box-icon id="diceIcon" name='dice-1' color='#40454c'></box-icon>
+      </div>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
       </section>
     </main>
 
     <script src="./js/bdUsuarios.js"></script>
     <script src="./js/theme-toggle.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/timeout.js"></script>
+    <script src="./js/dados.js"></script>
   </body>
 </html>
